move to bun/vite

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Your Orders",
-  "name": "Your Orders",
+  "short_name": "Sadochok",
+  "name": "Kindergarten",
   "icons": [
     {
       "src": "favicon.ico",
